--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
